Fix blog title and date spacing

--- a/_themes/basics/sass/components/_blog-post.scss
+++ b/_themes/basics/sass/components/_blog-post.scss
@@ -8,3 +8,17 @@
         }
     }
 }
+
+.c-blog-post__title {
+    margin-bottom: 5px;
+}
+
+.c-blog-post__date {
+    margin-top: 5px;
+}
+
+.c-blog-post__body {
+    ul {
+        padding-left: 30px;
+    }
+}
